--- a/food-web/src/main/resources/static/flavor_find.html
+++ b/food-web/src/main/resources/static/flavor_find.html
@@ -19,7 +19,7 @@
     <link href="css/animate.min.css" rel="stylesheet" type="text/css"/>
     <link href="plugins/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" type="text/css"/>
     <!-- CORE CSS FRAMEWORK - END -->
-
+    <link rel="stylesheet" href="css/pagination.css">
     <!-- CORE CSS TEMPLATE - START -->
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
 
@@ -558,18 +558,21 @@
                 <section class="box ">
                     <header class="panel_header">
                         <h4>口味签信息表</h4>
-                        <table id="table_article" class="table table-striped table-hover bg-info">
+                        <table class="table table-hover" id="all_list">
                             <thead>
                             <tr>
+                                <th>序号</th>
                                 <th>编号</th>
                                 <th>口味签昵称</th>
                             </tr>
                             </thead>
-                            <tbody class="tabs-left">
+                            <tbody id="tbodys">
+
 
                             </tbody>
                         </table>
                     </header>
+                    <div id="page"></div>
                 </section>
             </div>
 
@@ -579,6 +582,47 @@
 
 
 </div>
+<!--模态框-->
+<div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">详细信息</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <p> 图片:
+                    <div class="foodImage" style="width:100px;height:100px;border:1px solid"></div>
+                    </p>
+                    <p> 菜名: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜系: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜品: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜名: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜系: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜品: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜名: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜系: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜品: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 <!-- END CONTAINER -->
 <!-- LOAD FILES AT PAGE END FOR FASTER LOADING -->
 
@@ -600,65 +644,12 @@
 <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - END -->
 
 <!-- CORE TEMPLATE JS - START -->
+<script src="js/jquery.pagination.js"></script>
 <script src="js/scripts.js"></script>
+<script src="data/flavor.js"></script>
 <!-- END CORE TEMPLATE JS - END -->
 <script>
-    $(document).ready(function () {
-        $('#table_article').DataTable({
-            language: {
-                "lengthMenu": '每页显示<select>' + '<option value="10">10</option>'
-                    + '<option value="20">20</option>'
-                    + '<option value="30">30</option>'
-                    + '<option value="40">40</option>'
-                    + '<option value="50">50</option>' + '</select>条',
-                "oPaginate": {
-                    "sFirst": "首页",
-                    "sPrevious": "上一页",
-                    "sNext": "下一页",
-                    "sLast": "末页"
-                },
-                "processing": "加载中...",  //DataTables载入数据时，是否显示‘进度’提示
-                "info": "共 _PAGES_ 页  _TOTAL_ 条数据  ",
-                'sPaginationType': "full_numbers", //详细分页组，可以支持直接跳转到某页
-                "infoEmpty": "暂无数据",
-                "sLengthMenu": "显示_MENU_条 ",
-                "emptyTable": "暂无要处理的数据...",  //表格中无数据
-                "search": "搜索:",
-                "infoFiltered": " —— 从  _MAX_ 条数据中筛选",
-                "zeroRecords": "暂未查询到相关信息"
-            },
-            "ajax": {
-                url: "../list_employee",
-                type: "GET", dataSrc: function (result) {
-                    if (result.code === 500) {
-                        $("#new").append(
-                            //占据整个屏幕Div
-                            "<div id='fullScreen'></div>" +
-                            //浮层区
-                            "<div id='message-floatLayer'> <p class='big-font'>提示消息</p> <p class='small-font'>" + result.message + "</p>" +
-                            "<input id='hide3' type='button' class='btn-round btn-primary col-xs-3' value='关闭'>" +
-                            "</div>"
-                        );
-                        $("#hide3").click(function () {
-                            $("#fullScreen,#message-floatLayer").remove();
-                        });
-                    }
-                    console.log(result.data);
-                    return result.data;
-                }
-            },
-            "columns": [{'data': 'emId'},
-                {'data': 'username'},
-                {'data': 'emSex'},
-                {'data': 'emIdentityCard'},
-                {'data': 'emPosition'},
-                {'data': 'emNumber'},
-                {'data': 'emAddress'},
-                {'data': 'emGrade'},
-                {'data': 'emGradeStatus'}
-            ]
-        });
-    });
+
 </script>
 </body>
 
