--- a/food-web/src/main/resources/static/food_cooking_time_find.html
+++ b/food-web/src/main/resources/static/food_cooking_time_find.html
@@ -21,6 +21,8 @@
     <!-- CORE CSS FRAMEWORK - END -->
 
     <!-- CORE CSS TEMPLATE - START -->
+    <link rel="stylesheet" href="css/pagination.css">
+
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
 
 </head>
@@ -305,7 +307,7 @@
                     </ul>
                 </li>
 
-                <li class="">
+                <li class="open">
                     <a href="javascript:;">
                         <i>
                             <svg t="1585705560609" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -374,7 +376,7 @@
                             </ul>
                         </li>
 
-                        <li class="open">
+                        <li class="">
                             <a href="javascript:;">
                                 <i class="fa fa-adn"></i>
                                 <span class="title">难度签</span>
@@ -558,18 +560,20 @@
                 <section class="box ">
                     <header class="panel_header">
                         <h4>烹饪时间签信息表</h4>
-                        <table id="table_article" class="table table-striped table-hover bg-info">
+                        <table class="table table-hover" id="all_list">
                             <thead>
                             <tr>
+                                <th>序号</th>
                                 <th>编号</th>
                                 <th>烹饪时间分级</th>
                             </tr>
                             </thead>
-                            <tbody class="tabs-left">
+                            <tbody id="tbodys">
 
                             </tbody>
                         </table>
                     </header>
+                    <div id="page"></div>
                 </section>
             </div>
 
@@ -599,66 +603,11 @@
 <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - END -->
 
 <!-- CORE TEMPLATE JS - START -->
+<!--分页-->
+<script src="js/jquery.pagination.js"></script>
+<script src="data/cookingtime.js"></script>
 <script src="js/scripts.js"></script>
 <!-- END CORE TEMPLATE JS - END -->
-<script>
-    $(document).ready(function () {
-        $('#table_article').DataTable({
-            language: {
-                "lengthMenu": '每页显示<select>' + '<option value="10">10</option>'
-                    + '<option value="20">20</option>'
-                    + '<option value="30">30</option>'
-                    + '<option value="40">40</option>'
-                    + '<option value="50">50</option>' + '</select>条',
-                "oPaginate": {
-                    "sFirst": "首页",
-                    "sPrevious": "上一页",
-                    "sNext": "下一页",
-                    "sLast": "末页"
-                },
-                "processing": "加载中...",  //DataTables载入数据时，是否显示‘进度’提示
-                "info": "共 _PAGES_ 页  _TOTAL_ 条数据  ",
-                'sPaginationType': "full_numbers", //详细分页组，可以支持直接跳转到某页
-                "infoEmpty": "暂无数据",
-                "sLengthMenu": "显示_MENU_条 ",
-                "emptyTable": "暂无要处理的数据...",  //表格中无数据
-                "search": "搜索:",
-                "infoFiltered": " —— 从  _MAX_ 条数据中筛选",
-                "zeroRecords": "暂未查询到相关信息"
-            },
-            "ajax": {
-                url: "../list_employee",
-                type: "GET", dataSrc: function (result) {
-                    if (result.code === 500) {
-                        $("#new").append(
-                            //占据整个屏幕Div
-                            "<div id='fullScreen'></div>" +
-                            //浮层区
-                            "<div id='message-floatLayer'> <p class='big-font'>提示消息</p> <p class='small-font'>" + result.message + "</p>" +
-                            "<input id='hide3' type='button' class='btn-round btn-primary col-xs-3' value='关闭'>" +
-                            "</div>"
-                        );
-                        $("#hide3").click(function () {
-                            $("#fullScreen,#message-floatLayer").remove();
-                        });
-                    }
-                    console.log(result.data);
-                    return result.data;
-                }
-            },
-            "columns": [{'data': 'emId'},
-                {'data': 'username'},
-                {'data': 'emSex'},
-                {'data': 'emIdentityCard'},
-                {'data': 'emPosition'},
-                {'data': 'emNumber'},
-                {'data': 'emAddress'},
-                {'data': 'emGrade'},
-                {'data': 'emGradeStatus'}
-            ]
-        });
-    });
-</script>
 </body>
 
 </html>
