--- a/food-web/src/main/resources/static/food_cooking_time_update.html
+++ b/food-web/src/main/resources/static/food_cooking_time_update.html
@@ -305,7 +305,7 @@
                     </ul>
                 </li>
 
-                <li class="">
+                <li class="open">
                     <a href="javascript:;">
                         <i>
                             <svg t="1585705560609" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -374,7 +374,7 @@
                             </ul>
                         </li>
 
-                        <li class="open">
+                        <li class="">
                             <a href="javascript:;">
                                 <i class="fa fa-adn"></i>
                                 <span class="title">难度签</span>
@@ -561,7 +561,7 @@
                             <h2>烹饪时间签修改</h2>
                         </div>
                         <div class="content-body">
-                            <form id="f_user_add" action="javascript:;" novalidate="novalidate">
+                            <form id="form_add" action="javascript:;" novalidate="novalidate">
                                 <div class="row">
 
                                     <div class="">
@@ -571,8 +571,7 @@
                                             <span class="desc"></span>
                                             <div class="controls">
                                                 <label>
-                                                    <input type="text" readonly class="form-control"
-                                                           name="food_cooking_time_id">
+                                                    <input type="text" class="form-control" name="id">
                                                 </label>
                                             </div>
                                         </div>
@@ -582,15 +581,15 @@
                                             <span class="desc"></span>
                                             <div class="controls">
                                                 <label>
-                                                    <input type="text" class="form-control"
-                                                           name="food_cooking_time_name">
+                                                    <input type="text" class="form-control" name="name">
                                                 </label>
                                             </div>
                                         </div>
 
                                     </div>
                                     <div class="col-md-1 btn-block">
-                                        <button type="submit">提交</button>
+                                        <button id="select_bt" type="button">查找</button>
+                                        <button id="success-submit" type="submit">提交</button>
                                         <button type="reset">重置</button>
                                     </div>
                                 </div>
@@ -626,6 +625,7 @@
 <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - END -->
 
 <!-- CORE TEMPLATE JS - START -->
+<script src="data/cookingtime-up.js"></script>
 <script src="js/scripts.js"></script>
 <!-- END CORE TEMPLATE JS - END -->
 
