zhanhanxu 页面链接完善

--- a/food-web/src/main/resources/static/index.html
+++ b/food-web/src/main/resources/static/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
+    <link rel="shortcut icon" href="img/png/logo1.png" type="image/x-icon">
     <title>有谱 - 美食|菜谱大全|食谱|美食网 - 做你最喜爱的美食,食谱,菜谱网</title>
     <meta name="keywords"
           content="美食,美食网,菜谱,菜谱网,美食地图,食谱,食谱网,特色食谱,特色美食,美食大全家常菜谱,菜谱大全,美食网站,特色菜谱,最新菜谱,美食分享,美食加盟,人气美食,菜谱分享,餐饮加盟,特色小吃,美食文化"/>
@@ -12,8 +13,8 @@
     <link rel="stylesheet" type="text/css" media="all" href="https://s1.c.meishij.net/n/css/ss_base.css?v=1517"/>
     <link rel="stylesheet" type="text/css" media="all" href="css/main.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="https://s1.c.meishij.net/n/css/index.css?v=2133"/>
-
     <link rel="stylesheet" href="css/user.css">
+
     <script src="js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="js/j.m.js"></script>
     <script type="text/javascript" src="js/list.js"></script>
@@ -21,7 +22,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=100">
     <script type="text/javascript" src="js/m.js"></script>
     <script type="text/javascript" src="js/load.js"></script>
-
+    <style>
+        .userinfo_w:hover .top_userinfo_more {
+            display: block;
+        }
+    </style>
 </head>
 <body>
 <!--顶部-->
@@ -40,7 +45,7 @@
         </div>
         <!--登录/注册-->
         <div class="loginitem_h">
-            <a href="#" class="link header_login">注册</a>
+            <a href="logon-youpu.html" class="link header_login">注册</a>
             <a href="logon-youpu.html" class="link header_register">登录</a>
         </div>
     </div>
