--- a/food-web/src/main/resources/static/details.html
+++ b/food-web/src/main/resources/static/details.html
@@ -25,6 +25,11 @@
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();</script>
+    <style>
+        .userinfo_w:hover .top_userinfo_more {
+            display: block;
+        }
+    </style>
 </head>
 <body style="">
 <div class="adinheader"><div class="adinheader_w"><script>
@@ -129,57 +134,76 @@
         </li>
         <li class="hasmore"><a href="healthy-eating.html" class="link pngFix"><strong>饮食健康</strong></a>
             <div class="dw clearfix">
-                    <div class="dww clearfix dww_ysjk">
-                        <div class="dwitem clearfix pngFix">
-                            <dl class="clearfix">
-                                <dt><a href="healthy-eating.html">饮食健康</a></dt>
-                                <dd><a href="#">饮食小常识</a></dd><dd><a href="#">美容瘦身</a></dd>
-                                <dd><a href="#">食品安全</a></dd><dd><a href="#">养生妙方</a></dd>
-                                <dd><a href="#">饮食禁忌</a></dd><dd><a href="#">中医保健</a></dd>
-                                <dd><a href="#">母婴健康饮食</a></dd><dd><a href="#">饮食新闻</a></dd>
-                            </dl>
-                        </div>
-                        <div class="dwitem clearfix">
-                            <dl class="clearfix"><dt><a href="healthy-method.html">功能性调理</a></dt>
-                                <dd><a href="#">清热去火</a></dd><dd><a href="#">减肥</a></dd>
-                                <dd><a href="#">祛痰</a></dd><dd><a href="#">乌发</a></dd>
-                                <dd><a href="#">滋阴补肾</a></dd><dd><a href="#">健脾开胃</a></dd>
-                                <dd><a href="#">消化不良</a></dd><dd><a href="#">清热解毒</a></dd>
-                                <dd><a href="#">补阳壮阳</a></dd><dd><a href="#">增肥</a></dd>
-                            </dl>
-                        </div><br/>
-                        <div class="dwitem dwitem_half clearfix">
-                            <dl class="clearfix">
-                                <dt><a href="healthy-people.html">人群膳食</a></dt>
-                                <dd><a href="#">孕妇</a></dd><dd><a href="#">老人</a></dd>
-                                <dd><a href="#">产妇</a></dd><dd><a href="#">哺乳期</a></dd>
-                                <dd><a href="#">青少年</a></dd><dd><a href="#">幼儿</a></dd>
-                                <dd><a href="#">学龄期儿童</a></dd>
-                            </dl>
-                        </div>
-                        <div class="dwitem dwitem_half clearfix">
-                            <dl class="clearfix">
-                                <dt><a href="healthy-sick.html">疾病调理</a></dt><dd><a href="#">糖尿病</a></dd>
-                                <dd><a href="#">高血压</a></dd><dd><a href="#">痛风</a></dd>
-                                <dd><a href="#">胃炎</a></dd><dd><a href="#">痔疮</a></dd>
-                                <dd><a href="#">更年期</a></dd><dd><a href="#">甲状腺</a></dd>
-                            </dl>
-                        </div><br/>
-                        <div class="dwitem clearfix">
-                            <dl class="clearfix">
-                                <dt><a href="healthy-heart.html">脏腑调理</a></dt>
-                                <dd><a href="#">感冒</a></dd>
-                                <dd><a href="#">补肾</a></dd>
-                                <dd><a href="#">阳痿早泄</a></dd>
-                                <dd><a href="#">补血</a></dd>
-                                <dd><a href="#">便秘</a></dd>
-                                <dd><a href="#">腹泻</a></dd>
-                                <dd><a href="#">活血化瘀</a></dd>
-                            </dl>
-                        </div>
-                        <!--<div class="bgitem">
-                        </div>-->
+                <div class="dww clearfix dww_ysjk">
+                    <div class="dwitem clearfix pngFix">
+                        <dl class="clearfix">
+                            <dt><a href="healthy-eating.html">饮食健康</a></dt>
+                            <dd><a href="#">饮食小常识</a></dd>
+                            <dd><a href="#">美容瘦身</a></dd>
+                            <dd><a href="#">食品安全</a></dd>
+                            <dd><a href="#">养生妙方</a></dd>
+                            <dd><a href="#">饮食禁忌</a></dd>
+                            <dd><a href="#">中医保健</a></dd>
+                            <dd><a href="#">母婴健康饮食</a></dd>
+                            <dd><a href="#">饮食新闻</a></dd>
+                        </dl>
                     </div>
+                    <div class="dwitem clearfix">
+                        <dl class="clearfix">
+                            <dt><a href="healthy-method.html">功能性调理</a></dt>
+                            <dd><a href="#">清热去火</a></dd>
+                            <dd><a href="#">减肥</a></dd>
+                            <dd><a href="#">祛痰</a></dd>
+                            <dd><a href="#">乌发</a></dd>
+                            <dd><a href="#">滋阴补肾</a></dd>
+                            <dd><a href="#">健脾开胃</a></dd>
+                            <dd><a href="#">消化不良</a></dd>
+                            <dd><a href="#">清热解毒</a></dd>
+                            <dd><a href="#">补阳壮阳</a></dd>
+                            <dd><a href="#">增肥</a></dd>
+                        </dl>
+                    </div>
+                    <br/>
+                    <div class="dwitem dwitem_half clearfix">
+                        <dl class="clearfix">
+                            <dt><a href="healthy-people.html">人群膳食</a></dt>
+                            <dd><a href="#">孕妇</a></dd>
+                            <dd><a href="#">老人</a></dd>
+                            <dd><a href="#">产妇</a></dd>
+                            <dd><a href="#">哺乳期</a></dd>
+                            <dd><a href="#">青少年</a></dd>
+                            <dd><a href="#">幼儿</a></dd>
+                            <dd><a href="#">学龄期儿童</a></dd>
+                        </dl>
+                    </div>
+                    <div class="dwitem dwitem_half clearfix">
+                        <dl class="clearfix">
+                            <dt><a href="healthy-sick.html">疾病调理</a></dt>
+                            <dd><a href="#">糖尿病</a></dd>
+                            <dd><a href="#">高血压</a></dd>
+                            <dd><a href="#">痛风</a></dd>
+                            <dd><a href="#">胃炎</a></dd>
+                            <dd><a href="#">痔疮</a></dd>
+                            <dd><a href="#">更年期</a></dd>
+                            <dd><a href="#">甲状腺</a></dd>
+                        </dl>
+                    </div>
+                    <br/>
+                    <div class="dwitem clearfix">
+                        <dl class="clearfix">
+                            <dt><a href="healthy-heart.html">脏腑调理</a></dt>
+                            <dd><a href="#">感冒</a></dd>
+                            <dd><a href="#">补肾</a></dd>
+                            <dd><a href="#">阳痿早泄</a></dd>
+                            <dd><a href="#">补血</a></dd>
+                            <dd><a href="#">便秘</a></dd>
+                            <dd><a href="#">腹泻</a></dd>
+                            <dd><a href="#">活血化瘀</a></dd>
+                        </dl>
+                    </div>
+                    <!--<div class="bgitem">
+                    </div>-->
+                </div>
             </div>
         </li>
         <li ><a href="#" class="link pngFix"><strong>美食菜单</strong></a></li>
@@ -501,7 +525,6 @@
         </div>
     </div>
 </div>
-</div>
 <!--底部-->
 <div class="main_footer pngFix">
     <div class="footer_con1 clearfix">
@@ -533,4 +556,10 @@
         </ul>
         <!--<p><a target="_blank" href="https://www.miibeian.gov.cn" class="gray_a">京ICP备14030359号</a>/<a target="_blank" href="https://beian.gov.cn/" class="gray_a"><img src="https://st-cn.meishij.net/p2/20180208/20180208111357_93713.png" />京公网安备11010802026928</a> Copyright © 2003-2020 MEISHIJ CO.,LTD.</p>-->
     </div>
-</div><div style="display:none;"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1259001544'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/stat.php%3Fid%3D1259001544' type='text/javascript'%3E%3C/script%3E"));</script></div></body></html>
+</div>
+<div style="display:none;">
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    document.write(unescape("%3Cspan id='cnzz_stat_icon_1259001544'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/stat.php%3Fid%3D1259001544' type='text/javascript'%3E%3C/script%3E"));</script>
+</div>
+</body>
+</html>
